style: aplica formatacao do spotless nos arquivos java